--- a/data/block.htm
+++ b/data/block.htm
@@ -3,13 +3,20 @@
  <div class="alert alert-dismissible alert-warning">
   Будильник 1: <b>{{times1}}</b>
   <br>Будильник 2:  <b>{{times2}}</b>
-  <br>Время работы: <b>{{timeled}}</b>мин.
+  <br>Продолжительность работы будильника: <b>{{timeled}}</b>сек.
  </div>
- <input type="color" onchange="ajax('{{ip}}','rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16)+'&t={{timeled}}',this);" class="btn btn-block btn-primary" style="height:40px;">
- <input type="submit" onclick="ajax('{{ip}}','rgb?r=255&g=255&b=255&t={{timeled}}',this);" value="Включить белый" class="btn btn-block btn-primary">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Красный" onclick="ajax('{{ip}}','rgb?r=255&g=0&b=0&t={{timeled}}',this);" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Зеленый" onclick="ajax('{{ip}}','rgb?r=0&g=255&b=0&t={{timeled}}',this);" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Синий" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=255&t={{timeled}}',this);" type="submit">
+ <hr>
+ <div class="alert alert-dismissible alert-success">
+  Включить led на
+  <select id="work-time" class="form-control input-sm" style="width: 50px; display: inline;">
+   <option value="60">1</option><option value="300" selected>5</option><option value="600">10</option><option value="1500">15</option><option value="1800">30</option><option value="3600">60</option><option value="5400">1:30</option><option value="7200">2:00</option><option value="10800">3:00</option>
+  </select> минут.
+ </div>
+ <input type="color" value="#ffffff" onchange="ajax('{{ip}}','rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16)+'&t='+document.getElementById('work-time').value,this);" class="btn btn-block btn-primary" style="height:40px;">
+ <input type="submit" onclick="ajax('{{ip}}','rgb?r=255&g=255&b=255&t='+document.getElementById('work-time').value,this);" value="Включить белый" class="btn btn-block btn-primary">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Красный" onclick="ajax('{{ip}}','rgb?r=255&g=0&b=0&t='+document.getElementById('work-time').value,this);" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Зеленый" onclick="ajax('{{ip}}','rgb?r=0&g=255&b=0&t='+document.getElementById('work-time').value,this);" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-default" value="Синий" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=255&t='+document.getElementById('work-time').value,this);" type="submit">
  <input type="submit" onclick="ajax('{{ip}}','rgb?r=0&g=0&b=0&t=1',this);" value="Выключить" class="btn btn-block btn-primary">
  <hr>
  <div class="alert alert-dismissible alert-info">Изменить конфигурацию устройсва вы можете на странице управления</div>
