--- a/data/block.htm
+++ b/data/block.htm
@@ -6,8 +6,8 @@
   <br>Продолжительность работы будильника: <b>{{timeled}}</b>сек.
  </div>
  <hr>
- <div class="alert alert-dismissible alert-success">
-  Включить led на
+ <div class="alert alert-dismissible alert-info">
+  Нажимая ниже на кнопки цвета, он будит гореть
   <select id="work-time" class="form-control input-sm" style="width: 50px; display: inline;">
    <option value="60">1</option><option value="300" selected>5</option><option value="600">10</option><option value="1500">15</option><option value="1800">30</option><option value="3600">60</option><option value="5400">1:30</option><option value="7200">2:00</option><option value="10800">3:00</option>
   </select> минут.
