--- a/data/device.htm
+++ b/data/device.htm
@@ -138,7 +138,8 @@
      <h5 class="alert-info">{{SSDP}}</h5>
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide')" >подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".</span> </div>
+     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".<strong id="url"><br>Локальная ссылка: Выберите цвет<br>Глобальная ссылка: Выберите цвет</strong></span>
+       </div>
      <div class="thumb">
       <div class="preview"></div>
       <img alt="" style="cursor:pointer;width:100%;" src="/swatches.png" />
@@ -167,7 +168,6 @@
      </div>
      <canvas id="cs" style="display:none;"></canvas>
      <input type="submit" class="btn btn-block btn-primary" onclick="set_rgb(this,0,0,0,1)" value="Выключить">
-     <p id="url"></p>
      <hr>
      <h2>Будильники</h2>
      <div class="row">
