--- a/data/device.htm
+++ b/data/device.htm
@@ -163,7 +163,7 @@
        </div>
        <hr>
        <h4>Время работы сигнала:</h4>
-       <input class="form-control" value="0.1" id="sound">
+       <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+"  id="sound">
        <hr>
        <a href="#" onclick="document.getElementById('set-time').style.display='none';return false" class="btn btn-block btn-default">Отмена</a>
       </div>
