--- a/data/index.htm
+++ b/data/index.htm
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Страница устройств</title>
   <script type="text/javascript">
-   function load(){
+   window.onload = function() {
     if (window.XMLHttpRequest) {
      xhttp = new XMLHttpRequest();
     } else {
@@ -43,6 +43,32 @@
       loadBlock(ipval);
      }
     }
+    // xhr = new XMLHttpRequest();
+    // xhr.open('GET', '/iplocation.xml?'+Math.floor(Math.random()*10000), true);
+    // xhr.responseType = 'document';
+    // xhr.overrideMimeType('text/xml');
+    // xhr.onload = function () {
+    //  if (xhr.readyState === xhr.DONE) {
+    //   if (xhr.status === 200) {
+    //    document.getElementById('content').innerHTML='';
+    //    xmlDoc = xhr.responseXML;
+    //    var count=xmlDoc.getElementsByTagName("ip").length;
+    //    for (i = 0; i < count; i++) {
+    //     var ipval = xmlDoc.getElementsByTagName("ip")[i].childNodes[0].textContent;
+    //     if (searc == 'search') {
+    //      xhttp.open("GET", "http://"+ipval+"/devices?"+Math.floor(Math.random()*10000), false);
+    //      xhttp.send();
+    //     }
+    //     if (ipval == '0.0.0.0') {
+    //      location.href = "/setup.htm";
+    //     } else {
+    //      loadBlock(ipval);
+    //     }
+    //    }
+    //   }
+    //  }
+    // };
+    // xhr.send(null);
    }
 
    function loadBlock(ipval) {
@@ -94,7 +120,7 @@
    }
   </script>
  </head>
- <body onload="load();">
+ <body>
   <div class="container device">
    <div class="header">
     <h4><small class="pull-right col-md-4 hidden-xs" style="padding:15px 0;">Здесь видны все ваши устройства, скачать прошивки для ESP8266 вы можете на github <a href="https://github.com/tretyakovsa/jaluzi" target="_blank">Жалюзи</a>, <a href="https://github.com/renat2985/rgb" target="_blank">RGB</a>. Появились какие-то вопросы, пишите <a href="https://github.com/tretyakovsa/jaluzi/issues/new" target="_blank">сюда(жалюзи)</a> или <a href="https://github.com/renat2985/rgb/issues/new" target="_blank">cюда(rgb)</a>.</small></h4>
