Добавлены новые кнопки

--- a/data/device.htm
+++ b/data/device.htm
@@ -140,6 +140,7 @@
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info">{{SSDP}}</h5>
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
+     <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
      <hr>
      <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".<strong><br>Локальная ссылка: <u id="url1">Выберите цвет</u><br>Глобальная ссылка: <u id="url2">Выберите цвет</u></strong></span>
      </div>
