--- a/data/setup.htm
+++ b/data/setup.htm
@@ -70,6 +70,7 @@
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info" id="ssdp_t">{{SSDP}}</h5>
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
+     <a class="btn btn-block btn-default" href="/device.htm">Страница управления</a>
      <hr>
      <div class="alert alert-dismissible alert-warning"><strong>Пожалуйста подключитесь к своему роутеру и укажите ниже вашу GMT зону.</strong>
       Это позволит управлять вашим устройством в локальной сети и синхронизировать время используя ваш роутер.</div>
