--- a/data/device.htm
+++ b/data/device.htm
@@ -121,6 +121,10 @@
     server = "/times2?time2="+val('time2');
     send_request(submit,server);
    }
+   function ddns(submit){
+    server = "/ddns?url="+val('ddns');
+    send_request(submit,server);
+   }
   </script>
   <style type="text/css">
    #set-time {
@@ -205,6 +209,11 @@
        <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time(this);" type="submit">
       </div>
      </div>
+     <hr>
+     <h2>Dynamic DNS Providers</h2>
+     <div class="alert alert-dismissible alert-info">Каждый час устройство будит переходить по вашей ссылке, Вы можете воспользоваться сервисом http://dyndns.dk и таким образом сделать себе домен на динамическом IP.</div>
+     <input id="ddns" value="{{ddns}}" class="form-control" pattern="http://.+">
+     <input class="btn btn-block btn-success" value="Сохранить" onclick="ipwan(this);" type="submit">
      <hr>
      <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
     </div>
