--- a/data/setup.htm
+++ b/data/setup.htm
@@ -89,7 +89,7 @@
      <hr>
      <h2>Подключение к WiFi роутеру</h2>
      <input id="ssid" value="{{ssid}}" class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Имя WiFi сети">
-     <input id="password" value="{{password}}" pattern="[0-9a-zA-Z.]{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
+     <input id="password" value="{{password}}" pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
      <input class="btn btn-block btn-success" value="Сохранить" onclick="set_ssid(this);" type="submit">
      <hr>
      <h2>Временная зона GMT</h2>
@@ -103,7 +103,7 @@
      <div class="row">
       <div class="col-sm-6">
        <input id="ssidap" value="{{ssidAP}}" class="form-control" pattern="[0-9a-zA-Z.]{1,15}" placeholder="Имя WiFi сети">
-       <input id="passwordAp" value="{{passwordAP}}" pattern="[0-9a-zA-Z.]{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
+       <input id="passwordAp" value="{{passwordAP}}" pattern=".{8,15}" onfocus="this.type='text'" type="password" class="form-control" placeholder="Пароль">
        <input class="btn btn-block btn-success" value="Сохранить" onclick="set_ssid_ap(this);" type="submit">
       </div>
       <div class="col-sm-6">
