--- a/data/device.htm
+++ b/data/device.htm
@@ -213,7 +213,7 @@
      <h2>Dynamic DNS Providers</h2>
      <div class="alert alert-dismissible alert-info">Каждый час устройство будит переходить по вашей ссылке, Вы можете воспользоваться сервисом http://dyndns.dk и таким образом сделать себе домен на динамическом IP.</div>
      <input id="ddns" value="{{ddns}}" class="form-control" pattern="http://.+">
-     <input class="btn btn-block btn-success" value="Сохранить" onclick="ipwan(this);" type="submit">
+     <input class="btn btn-block btn-success" value="Сохранить" onclick="ddns(this);" type="submit">
      <hr>
      <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
     </div>
