--- a/data/setup.htm
+++ b/data/setup.htm
@@ -11,9 +11,9 @@
    var set_real_time;
    function handleServerResponse(){
     clearTimeout(set_real_time);
-    var res = xml('time').split(":");
+    var res = jsonResponse.time.split(":");
     real_time(hours=res[0],min=res[1],sec=res[2]);
-    document.body.style.backgroundColor="rgb("+xml('rgb')+")";
+    document.body.style.backgroundColor="rgb("+jsonResponse.rgb+")";
    }
    function real_time(hours,min,sec) {
    sec=Number(sec)+1;
