--- a/data/device.htm
+++ b/data/device.htm
@@ -122,7 +122,7 @@
     send_request(submit,server);
    }
    function ddns(submit){
-    server = "/ddns?url="+val('ddns');
+    server = "/ddns?url="+val('ddns').replace(/&/g, '%26');
     send_request(submit,server);
    }
   </script>
