--- a/data/device.htm
+++ b/data/device.htm
@@ -90,14 +90,14 @@
    function set_rgb(submit,r,g,b,t){
     document.body.style.background=rgbToHex(r,g,b);
     server = "/rgb?r="+r+"&g="+g+"&b="+b+"&t="+t+"&s="+val('sound')*10;
-    document.getElementById('url1').innerHTML='http://'+document.domain+server;
+    document.getElementById('url1').innerHTML='<a href="http://'+document.domain+server+'" target="_blank">http://'+document.domain+server+'</a>';
     if(navigator.onLine) {
      xhr = new XMLHttpRequest();
      xhr.open("GET","https://api.ipify.org?format=text",true);
      xhr.onload = function () {
       if (xhr.readyState === xhr.DONE) {
        if (xhr.status === 200) {
-        document.getElementById('url2').innerHTML="http://"+xhr.responseText+server;
+        document.getElementById('url2').innerHTML='<a href="http://'+xhr.responseText+server+'" target="_blank">http://'+xhr.responseText+server+'</a>';
        }
       }
      };
@@ -146,7 +146,7 @@
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
      <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".<strong><br>Локальная ссылка: <u id="url1">Выберите цвет</u><br>Глобальная ссылка: <u id="url2">Выберите цвет</u></strong></span>
+     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".<strong><br>Локальная ссылка: <span id="url1">Выберите цвет</span><br>Глобальная ссылка: <span id="url2">Выберите цвет</span></strong></span>
      </div>
      <div class="thumb">
       <div class="preview"></div>
@@ -216,7 +216,7 @@
      </div>
      <hr>
      <h2>Dynamic DNS Providers</h2>
-     <div class="alert alert-dismissible alert-info">Каждый час устройство будит переходить по вашей ссылке, Вы можете воспользоваться сервисом http://dyndns.dk и таким образом сделать себе домен на динамическом IP.</div>
+     <div class="alert alert-dismissible alert-info">В 45 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a href="http://dyndns.dk" target="_blank">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a href="https://ifttt.com" target="_blank">ifttt.com</a></div>
      <input id="ddns" value="{{DDNS}}" class="form-control" pattern="http://.+">
      <input class="btn btn-block btn-success" value="Сохранить" onclick="ddns(this);" type="submit">
      <hr>
