--- a/data/device.htm
+++ b/data/device.htm
@@ -146,7 +146,7 @@
      <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
      <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Включая led ниже формируется URL цвета, копируйте Global IP ссылку, создавайте новый сценарий на ifttt и вставляйте его в "Make a web request".<strong><br>Локальная ссылка: <span id="url1">Выберите цвет</span><br>Глобальная ссылка: <span id="url2">Выберите цвет</span></strong></span>
+     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Подробней о том как это сделать вы можете посмотреть видео <a href="https://youtu.be/3PVQYLQ-XDQ" target="_blank">здесь</a>.<strong><br>Локальная ссылка: <span id="url1">Выберите цвет</span><br>Глобальная ссылка: <span id="url2">Выберите цвет</span></strong></span>
      </div>
      <div class="thumb">
       <div class="preview"></div>
