--- a/data/device.htm
+++ b/data/device.htm
@@ -172,7 +172,10 @@
        </div>
        <hr>
        <h4>Время работы сигнала:</h4>
-       <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+"  id="sound">
+       <div class="input-group">
+        <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+"  id="sound">
+        <span class="input-group-addon">сек.</span>
+       </div>
        <hr>
        <a href="#" onclick="document.getElementById('set-time').style.display='none';return false" class="btn btn-block btn-default">Отмена</a>
       </div>
@@ -198,7 +201,11 @@
       </div>
       <div class="col-sm-6">
        <div class="alert alert-dismissible alert-warning"><b>Обратите внимание</b> Настраивая время перед одиночными цифрами пишите 0. Пример: 03:09:10.
-        Будильник будит повторять звонить каждый день.</div>
+        Будильник будит повторять звонить каждый день.
+       </div>
+       <div class="alert alert-dismissible alert-info">
+        Больше настроек вы можете получить <a href="https://ifttt.com/create/if-date_and_time?sid=1">здесь</a>.
+       </div>
       </div>
      </div>
      <div class="row">
