--- a/data/device.htm
+++ b/data/device.htm
@@ -204,7 +204,7 @@
         Будильник будит повторять звонить каждый день.
        </div>
        <div class="alert alert-dismissible alert-info">
-        Больше настроек вы можете получить <a href="https://ifttt.com/create/if-date_and_time?sid=1">здесь</a>.
+        Больше настроек вы можете получить на <a href="https://ifttt.com/create/if-date_and_time?sid=1" target="_blank">ifttt.com</a>.
        </div>
       </div>
      </div>
