--- a/data/device.htm
+++ b/data/device.htm
@@ -122,7 +122,7 @@
     send_request(submit,server);
    }
    function ddns(submit){
-    server = "/ddns?url="+val('ddns').replace(/&/g, '%26');
+    server = "/ddns?url="+encodeURIComponent(val('ddns'))+"&name"+val("ddns-name");
     send_request(submit,server);
    }
   </script>
@@ -187,13 +187,13 @@
      <div class="row">
       <div class="col-sm-6">
        <h4>Будильник 1:</h4>
-       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
+       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="Пример: 07:10:30">
        <div class="btn-group" style="width:100%;">
         <input class="btn btn-success" style="width:70%;" value="Сохранить" onclick="set_time1(this);" type="submit">
         <input class="btn btn-default" style="width:30%;" value="Выкл." onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
        </div>
        <h4>Будильник 2:</h4>
-       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control">
+       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="Пример: 07:10:30">
        <div class="btn-group" style="width:100%;">
         <input class="btn btn-success" style="width:70%;" value="Сохранить" onclick="set_time2(this);" type="submit">
         <input class="btn btn-default" style="width:30%;" value="Выкл." onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
@@ -222,9 +222,10 @@
       </div>
      </div>
      <hr>
-     <h2>Dynamic DNS Providers</h2>
-     <div class="alert alert-dismissible alert-info">В 45 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a href="http://dyndns.dk" target="_blank">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a href="https://ifttt.com" target="_blank">ifttt.com</a></div>
-     <input id="ddns" value="{{DDNS}}" class="form-control" pattern="http://.+">
+     <h2>Dynamic DNS</h2>
+     <div class="alert alert-dismissible alert-info">В 15, 30, 45 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a href="http://dyndns.dk" target="_blank">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a href="https://ifttt.com" target="_blank">ifttt.com</a></div>
+     <input id="ddns-name" value="{{DDNSName}}" class="form-control" placeholder="Host name">
+     <input id="ddns" value="{{DDNS}}" class="form-control" pattern="http://.+" placeholder="Service URL">
      <input class="btn btn-block btn-success" value="Сохранить" onclick="ddns(this);" type="submit">
      <hr>
      <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
