--- a/data/device.htm
+++ b/data/device.htm
@@ -122,7 +122,7 @@
     send_request(submit,server);
    }
    function ddns(submit){
-    server = "/ddns?url="+encodeURIComponent(val('ddns'))+"&name="+val("ddns-name");
+    server = "/ddns?url="+encodeURIComponent(val('ddns'))+"&wanurl="+val("ddns-name");
     send_request(submit,server);
    }
   </script>
