--- a/data/block.htm
+++ b/data/block.htm
@@ -14,7 +14,7 @@
  </div>
  <div class="input-group btn-block">
   <span class="input-group-addon" style="margin-bottom:5px;">Выбрите цвет:</span>
-  <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="ajax('{{ip}}','rgb?s=1&r='+parseInt((this.value).substring(1,3),16)+'&amp;g='+parseInt((this.value).substring(3,5),16)+'&amp;b='+parseInt((this.value).substring(5,7),16)+'&amp;t='+document.getElementById('work-time-{{ip}}').value,this);" value="#ffffff">
+  <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="ajax('{{ip}}','rgb?s=1&r='+parseInt((this.value).substring(1,3),16)+'&amp;g='+parseInt((this.value).substring(3,5),16)+'&amp;b='+parseInt((this.value).substring(5,7),16)+'&amp;t='+document.getElementById('work-time-{{ip}}').value,this);" value="#fdfdfd">
  </div>
  <input style="width:32%;display:inline-block" class="btn btn-block btn-danger" value="Красный" onclick="ajax('{{ip}}','rgb?s=1&r=255&g=0&b=0&t='+document.getElementById('work-time-{{ip}}').value,this);document.getElementById('color-{{ip}}').value='#FF0000';" type="submit">
  <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="Зеленый" onclick="ajax('{{ip}}','rgb?s=1&r=0&g=255&b=0&t='+document.getElementById('work-time-{{ip}}').value,this);document.getElementById('color-{{ip}}').value='#00FF00';" type="submit">
