--- a/data/device.htm
+++ b/data/device.htm
@@ -122,7 +122,7 @@
     send_request(submit,server);
    }
    function ddns(submit){
-    server = "/ddns?url="+encodeURIComponent(val('ddns'))+"&wanurl="+val("ddns-name");
+    server = "/ddns?url="+encodeURIComponent(val('ddns'))+"&wanurl="+val("ddns-name")+"&wanport="+val("ddns-port");
     send_request(submit,server);
    }
   </script>
@@ -211,7 +211,7 @@
      <div class="row">
       <h2>Время работы будильника</h2>
       <div class="col-sm-8">
-       <div class="alert alert-dismissible alert-info">Здесь указается время в секундах как долго будит звенеть будильник и гореть LED.</div>
+       <div class="alert alert-dismissible alert-info">Здесь указается время в секундах как долго будет звенеть будильник и гореть LED.</div>
       </div>
       <div class="col-sm-4">
        <div class="input-group">
@@ -224,7 +224,10 @@
      <hr>
      <h2>Dynamic DNS</h2>
      <div class="alert alert-dismissible alert-info">В 15, 30, 45 минут каждого часа устройство переходить по ссылке. Вы можете воспользоваться <a href="http://dyndns.dk" target="_blank">dyndns.dk</a> и таким образом сделать себе домен на динамическом IP. Что позволит комфортно пользоваться <a href="https://ifttt.com" target="_blank">ifttt.com</a></div>
-     <input id="ddns-name" value="{{DDNSName}}" class="form-control" placeholder="Host name">
+     <div class="input-group" style="width:100%;">
+      <input id="ddns-name" value="{{DDNSName}}" class="form-control" style="width:70%;display:inline" placeholder="Host name">
+      <input id="ddns-port" value="{{DDNSPort}}" class="form-control" style="width:30%;display:inline" pattern="[0-9]+" placeholder="Host port">
+     </div>
      <input id="ddns" value="{{DDNS}}" class="form-control" pattern="http://.+" placeholder="Service URL">
      <input class="btn btn-block btn-success" value="Сохранить" onclick="ddns(this);" type="submit">
      <hr>
