--- a/data/device.htm
+++ b/data/device.htm
@@ -90,14 +90,14 @@
    function set_rgb(submit,r,g,b,t){
     document.body.style.background=rgbToHex(r,g,b);
     server = "/rgb?r="+r+"&g="+g+"&b="+b+"&t="+t+"&s="+val('sound')*10;
-    document.getElementById('url1').innerHTML='<a href="http://'+document.domain+server+'" target="_blank">http://'+document.domain+server+'</a>';
+    document.getElementById('url1').innerHTML='<a href="http://'+document.domain+':'+jsonResponse.DDNSPort+server+'" target="_blank">http://'+document.domain+':'+jsonResponse.DDNSPort+server+'</a>';
     if(navigator.onLine) {
      xhr = new XMLHttpRequest();
      xhr.open("GET","https://api.ipify.org?format=text",true);
      xhr.onload = function () {
       if (xhr.readyState === xhr.DONE) {
        if (xhr.status === 200) {
-        document.getElementById('url2').innerHTML='<a href="http://'+(jsonResponse.DDNSName?(jsonResponse.DDNSName+server):xhr.responseText+server)+'" target="_blank">http://'+(jsonResponse.DDNSName?(jsonResponse.DDNSName+server):xhr.responseText+server)+'</a>';
+        document.getElementById('url2').innerHTML='<a href="http://'+(jsonResponse.DDNSName?(jsonResponse.DDNSName+':'+jsonResponse.DDNSPort+server):xhr.responseText+':'+jsonResponse.DDNSPort+server)+'" target="_blank">http://'+(jsonResponse.DDNSName?(jsonResponse.DDNSName+':'+jsonResponse.DDNSPort+server):xhr.responseText+':'+jsonResponse.DDNSPort+server)+'</a>';
        }
       }
      };
