--- a/data/setup.htm
+++ b/data/setup.htm
@@ -60,6 +60,8 @@
    }
    function restart(submit,texts){
     if (confirm(texts)) {
+     server = "/restart?device=ok";
+     send_request(submit,server);
      return true;
     } else {
      return false;
