Закончил перевод английской версии

--- a/data/device.htm
+++ b/data/device.htm
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/function.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Страница управления</title>
+  <title>Options page</title>
   <script type="text/javascript">
    function handleServerResponse(){
     var img = _('.thumb img'),
