--- a/data/setup.htm
+++ b/data/setup.htm
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/function.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Доп. настройки</title>
+  <title>Settings page</title>
   <script type="text/javascript">
    var set_real_time;
    function handleServerResponse(){
