--- a/data/device.htm
+++ b/data/device.htm
@@ -129,6 +129,12 @@
     <h1 style="margin:50px;">{{LangOptions1}}</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info">{{SSDP}}</h5>
+     <select class="btn btn-default" name="language" style="margin-top:-45px;float:right">
+      <option value="en">{{LangLanguage}}</option>
+      <option value="ru" onclick="language('ru',this)">Русский</option>
+      <option value="en" onclick="language('en',this)">English</option>
+      <option value="lv" onclick="language('lv',this)">Latviski</option>
+     </select>
      <a class="btn btn-block btn-danger" href="/">{{LangDevices}}</a>
      <a class="btn btn-block btn-default" href="/setup.htm">{{LangSetting3}}</a>
      <hr>
