--- a/data/device.htm
+++ b/data/device.htm
@@ -158,10 +158,10 @@
        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,10800)" value="3:00">
       </div>
       <hr>
-      <h4>{{LangTime12}}</h4>
+      <h4>{{LangTime5}}</h4>
       <div class="input-group">
        <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+" id="sound">
-       <span class="input-group-addon">{{LangSek}}</span>
+       <span class="input-group-addon">{{LangSec}}</span>
       </div>
       <hr>
       <a href="#" onclick="toggle('pop-up');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
