--- a/data/block.htm
+++ b/data/block.htm
@@ -1,14 +1,14 @@
 <div class="block col-md-5">
  <h5 class="alert-info">{{SSDP}}</h5>
  <div class="alert alert-dismissible alert-warning">
-  Будильник 1: <b>{{times1}}</b>
-  <br>Будильник 2:  <b>{{times2}}</b>
-  <br>Продолжительность работы будильника: <b>{{timeled}}</b>сек.
+  {{LangTime4}} 1: <b>{{times1}}</b>
+  <br>{{LangTime4}} 2:  <b>{{times2}}</b>
+  <br>{{LangTime5}} <b>{{timeled}}</b>{{LangSec}}
  </div>
  <hr>
  <div class="col-sm-offset-1 col-sm-10 pop-up hidden" id="pop-up-{{ip}}">
-  <h5 class="alert-warning">Время</h5>
-  <h4>На сколько минут включить?</h4>
+  <h5 class="alert-warning">{{LangTime10}}</h5>
+  <h4>{{LangTime8}}</h4>
   <div class="btn-group">
    <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=60&s='+val('sound')*10,thisId);return false" value="1">
    <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=300&s='+val('sound')*10,thisId);return false" value="5">
@@ -24,20 +24,20 @@
    <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=10800&s='+val('sound')*10,thisId);return false" value="3:00">
   </div>
   <hr>
-  <h4>Время работы сигнала:</h4>
+  <h4>{{LangTime5}}</h4>
   <div class="input-group">
    <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+" id="sound">
-   <span class="input-group-addon">сек.</span>
+   <span class="input-group-addon">{{LangSec}}</span>
   </div>
   <hr>
-  <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">Отмена</a>
+  <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
  </div>
  <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="toggle('pop-up-{{ip}}');colorUrl='rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16);thisId=this;return false" value="#fdfdfd">
- <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="Красный" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=255&g=0&b=0';document.getElementById('color-{{ip}}').value='#FF0000';thisId=this;return false" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="Зеленый" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=255&b=0';document.getElementById('color-{{ip}}').value='#00FF00';thisId=this;return false" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="Синий" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=0&b=255';document.getElementById('color-{{ip}}').value='#0000FF';thisId=this;return false" type="submit">
- <input type="submit" onclick="ajax('{{ip}}','led',this);" value="Включить\Выключить" class="btn btn-block btn-primary">
+ <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="{{LangColor1}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=255&g=0&b=0';document.getElementById('color-{{ip}}').value='#FF0000';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="{{LangColor2}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=255&b=0';document.getElementById('color-{{ip}}').value='#00FF00';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="{{LangColor3}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=0&b=255';document.getElementById('color-{{ip}}').value='#0000FF';thisId=this;return false" type="submit">
+ <input type="submit" onclick="ajax('{{ip}}','led',this);" value="{{LangOnOff}}" class="btn btn-block btn-primary">
  <hr>
- <div class="alert alert-dismissible alert-info">Изменить конфигурацию устройсва вы можете на странице управления</div>
- <a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">Страница управления</a>
+ <div class="alert alert-dismissible alert-info">{{LangOptions2}}</div>
+ <a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">{{LangOptions1}}</a>
 </div>
