--- a/data/block.htm
+++ b/data/block.htm
@@ -10,18 +10,18 @@
   <h5 class="alert-warning">{{LangTime10}}</h5>
   <h4>{{LangTime8}}</h4>
   <div class="btn-group">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=60&s='+val('sound')*10,thisId);return false" value="1">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=300&s='+val('sound')*10,thisId);return false" value="5">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=600&s='+val('sound')*10,thisId);return false" value="10">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=1500&s='+val('sound')*10,thisId);return false" value="15">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=1800&s='+val('sound')*10,thisId);return false" value="30">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=60&sound='+val('sound')*10,thisId);return false" value="1">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=300&sound='+val('sound')*10,thisId);return false" value="5">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=600&sound='+val('sound')*10,thisId);return false" value="10">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1500&sound='+val('sound')*10,thisId);return false" value="15">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1800&sound='+val('sound')*10,thisId);return false" value="30">
   </div>
   <br>
   <div class="btn-group">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=3600&s='+val('sound')*10,thisId);return false" value="60">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=5400&s='+val('sound')*10,thisId);return false" value="1:30">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=7200&s='+val('sound')*10,thisId);return false" value="2:00">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=10800&s='+val('sound')*10,thisId);return false" value="3:00">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=3600&sound='+val('sound')*10,thisId);return false" value="60">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=5400&sound='+val('sound')*10,thisId);return false" value="1:30">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=7200&sound='+val('sound')*10,thisId);return false" value="2:00">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=10800&sound='+val('sound')*10,thisId);return false" value="3:00">
   </div>
   <hr>
   <h4>{{LangTime5}}</h4>
@@ -32,10 +32,10 @@
   <hr>
   <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
  </div>
- <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="toggle('pop-up-{{ip}}');colorUrl='rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16);thisId=this;return false" value="#fdfdfd">
- <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="{{LangColor1}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=255&g=0&b=0';document.getElementById('color-{{ip}}').value='#FF0000';thisId=this;return false" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="{{LangColor2}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=255&b=0';document.getElementById('color-{{ip}}').value='#00FF00';thisId=this;return false" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="{{LangColor3}}" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=0&b=255';document.getElementById('color-{{ip}}').value='#0000FF';thisId=this;return false" type="submit">
+ <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="toggle('pop-up-{{ip}}');colorUrl='set?c='+(this.value).substring(1,7);thisId=this;return false" value="#fdfdfd">
+ <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="{{LangColor1}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=ff0000';document.getElementById('color-{{ip}}').value='#FF0000';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="{{LangColor2}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=00ff00';document.getElementById('color-{{ip}}').value='#00FF00';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="{{LangColor3}}" onclick="toggle('pop-up-{{ip}}');colorUrl='set?c=0000ff';document.getElementById('color-{{ip}}').value='#0000FF';thisId=this;return false" type="submit">
  <input type="submit" onclick="ajax('{{ip}}','led',this);" value="{{LangOnOff}}" class="btn btn-block btn-primary">
  <hr>
  <div class="alert alert-dismissible alert-info">{{LangOptions2}}</div>
