--- a/data/device.htm
+++ b/data/device.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -136,11 +136,11 @@
  </head>
  <body onload="load('first');">
   <div class="container">
-   <div class="row hidden" id="content" style="text-align:center;">
-    <h1 style="margin:50px;">{{LangOptions1}}</h1>
+   <div class="row hidden" id="content">
+    <h1 id="title">{{LangOptions1}}</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info">{{SSDP}}</h5>
-     <select class="btn btn-default" name="language" style="margin-top:-45px;float:right" onchange="language(this.value,this);">
+     <select class="btn btn-default" id="language" onchange="language(this.value,this);">
       <option value="en">{{LangLanguage}}</option>
       <option value="ru">Русский</option>
       <option value="en">English</option>
@@ -182,7 +182,6 @@
       <img alt="" style="cursor:pointer;width:100%;" src="/swatches.png" />
      </div>
      <canvas id="cs" style="display:none;"></canvas>
-
      <select class="btn btn-block btn-default" onchange="set_mode(this.value,this);">
       <option value="0">Select Mode</option>
       <option value="0">Static</option>
@@ -228,9 +227,7 @@
       <option value="40">Larson Scanner</option>
       <option value="41">Fireworks</option>
      </select>
-
      <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" id="off-on" value="{{LangOnOff}}">
-
      <hr>
      <h2>{{LangTime3}}</h2>
      <div class="row">
